Intersection/ROS2_with_robot_control/deis_ws/log/build_2020-12-11_23-31-54/py_intersection_mgr/stderr.log
  File "/home/ubuntu/deis_ws/install/py_intersection_mgr/lib/python3.8/site-packages/py_intersection_mgr/intersection_mgr.py", line 213
    else
       ^
SyntaxError: invalid syntax

